--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ matrix:
   include:
     - php: 5.6
     - php: 5.5
+# use modern infrastructure based on containers  
+sudo: false
 before_install:
   - cd ..
   - git clone https://github.com/neos/neos-base-distribution.git
